Finished Google Page(with results)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="google-homepage.css">
-    <link rel="icon" type="image/png" href="google-favicon.ico">
+    <link rel="icon" type="image/png" href="img/google-favicon.ico">
 </head>
 
 <body>
@@ -23,11 +23,11 @@
             target="_blank"> Sign In</a>
     </nav>
     <div class=container id="googlecon">
-        <img src="google-logo.png" id="google-logo" alt="google">
+        <img src="img/google-logo.png" id="google-logo" alt="google">
         <form>
             <div class="search" id="searchcon">
                 <input id="search" type="text" placeholder="Search Google or type URL" autocomplete="on">
-                <a href="#"><img src="voice-search.png" class="voiceSearch"></a>
+                <a href="#"><img src="img/voice-search.png" class="voiceSearch"></a>
             </div>
             <br>
             <a href="results.html" class="btn" id="btn">Google Search</a>
