--- a/results.html
+++ b/results.html
@@ -12,17 +12,17 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="google-homepage.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="google-favicon.ico">
+    <link rel="icon" type="image/png" href="img/google-favicon.ico">
 </head>
 
 <body>
     <!--                                  NAVIGATION AND SEARCH BARS                      -->
     <nav class="Rnav">
         <div class="searchcon2">
-            <img src="google-logo2.png">
+            <img src="img/google-logo2.png">
             <input id="search2" type="text" placeholder="" autocomplete="on">
             <button type="submit" class="btn-search"><i class="fa fa-search"></i></button>
-            <a href="#"><img src="voice-search.png" class="voiceSearch2"></a>
+            <a href="#"><img src="img/voice-search.png" class="voiceSearch2"></a>
         </div>
         <div class="Rnav-btns">
                     <a class="btn" href="#"><i class="fa fa-th fa-lg"></i></a>
@@ -54,9 +54,9 @@
     <a href="#" class="toplink search-header">Images for Web Development Projects</a>
     <br>
     <div class="images">
-    <img src="_webdev1.jpg">
-    <img src="_webdev3.jpg">
-    <img src="_webdev2.jpg">
+    <img src="img/_webdev1.jpg">
+    <img src="img/_webdev3.jpg">
+    <img src="img/_webdev2.jpg">
     </div>
     <div class="article" id="searchResults">
         <div class="search-results">
@@ -156,7 +156,7 @@
 
     </div>
 
-    <img id="google-pages" src="google-pages.png">
+    <img id="google-pages" src="img/google-pages.png">
     <!--                                       FOOTER LINKS ETC.                       -->
     <footer>
         <div class="breadcrumb">
